--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "lodash": "^4.17.21",
     "next": "13.4.10",
     "postcss": "8.4.26",
@@ -26,11 +28,11 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.14.195",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "@types/styled-components": "^5.1.26",
-    "@types/lodash": "^4.14.195",
-    "@types/react-overlays": "^3.1.0"
+    "@types/react-overlays": "^3.1.0",
+    "@types/styled-components": "^5.1.26"
   }
 }
